examples/voting-app/manifests/extras/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: voting-app
  labels:
    app: adminer
spec:
    replicas: 1
    selector:
        matchLabels:
          app: adminer
    template:
        metadata:
         labels:
            app: adminer
        spec:
          containers:
          - name: adminer
            image: adminer
            ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: voting-app
  labels:
    app: adminer
spec:
    ports:
        - port: 8080
    selector:
        app: adminer
