examples/voting-app/manifests/extras/redis-insight.yaml
# redis insight deployment and service
# ---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-insight
  namespace: voting-app
  labels:
    app: redis-insight
spec:
    replicas: 1
    selector:
        matchLabels:
          app: redis-insight
    template:
        metadata:
          labels:
            app: redis-insight
        spec:
          containers:
            - name: redis-insight
              image: redislabs/redisinsight:latest
              ports:
                - containerPort: 5504
---
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
  namespace: voting-app
  labels:
    app: redis-insight
spec:
    ports:
        - port: 5540
          targetPort: 5540
    selector:
        app: redis-insight
